[tool.black]
target-version = ['py311']
include = '\.pyi?$'
skip-magic-trailing-comma = true
preview = true

[tool.pyanalyze]
class_attribute_transformers = [
  "taxonomy.pyanalyze_config.class_attribute_transformer"
]
undefined_name = false
paths = ["."]

[project]
name = "taxonomy"
version = "0.0"
description = "Taxonomic database management software."
requires-python = ">=3.10"
authors = [
  { name = "Jelle Zijlstra", email = "jelle.zijlstra@gmail.com" },
]
keywords = [
  "taxonomy",
  "hesperomys",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "clirm",
    "IPython>8",
    "prompt_toolkit",
    "requests",
    "unidecode",
    "python-levenshtein",
    "bs4",
    "mypy",
    "flake8",
    "pytest",
    "aiohttp",
    "aiohttp_graphql",
    "graphene",
    "typing_inspect",
    "types-requests",
    "boto3",
    "botocore",
]

[project.urls]
Changelog = "https://github.com/JelleZijlstra/taxonomy/blob/master/docs/release-notes.md"
Homepage = "http://hesperomys.com/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["taxonomy/**/*.py", "hsweb/**/*.py"]

[tool.ruff]
line-length = 300
target-version = "py311"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "I",  # import sorting
  "ANN",  # type annotations for everything
  "C4",  # flake8-comprehensions
  "B",  # bugbear
  "SIM",  # simplify
  "UP",  # pyupgrade
  "PIE",  # various nice rules
  "PERF",  # unnecessary list() calls that can be replaced with literals
]

ignore = [
  "B008",  # do not perform function calls in argument defaults
  "B011",  # assert False is fine
  "ANN101",  # missing type annotation for self in method
  "ANN102",  # missing type annotation for cls in classmethod
  "F821",  # ADT definitions make lots of "undefined" names
  "SIM108",  # I don't like ternaries that much
  "E711",  # need "== None" in queries
  "E712",  # need "== True" in queries
  "UP038",  # no need to "X | Y" in isinstance
  "SIM105",  # I don't like contextlib.suppress
  "E731",  # I'll assign a lambda if I want to
  "SIM114",  # not that worth it
  "SIM102",  # not that worth it
  "ANN401",  # let me use Any
  "B006",  # just don't mutate it
  "SIM110",  # doesn't always make code better
  "SIM115",  # needs a bigger rewrite
  "PERF401",  # too eager to add list comprehensions
]

[tool.ruff.lint.per-file-ignores]
"taxonomy/db/models/__init__.py" = ["I"]
"taxonomy/db/models/article/__init__.py" = ["I"]
